# SpaceCadetPinball

./: .gitignore  BuildForWindows.ps1  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CompileAndPackage.ps1  CompileForDrMemory.bat  FuncStats.xlsx  LICENSE  README.md  SpaceCadetPinball.desktop  SpaceCadetPinball.sln  build-mac-app.sh  build.sh  mingwcc.cmake
.github/workflows/: ReleaseBuilds.yml
CMakeModules/: FindSDL2.cmake  FindSDL2_mixer.cmake
Casks/: space-cadet-pinball.rb
Doc/: .dat dump.txt  .dat file format.txt  .pdb dump.txt  FuncStats.xlsx
Platform/Linux/: BUILD.md  SpaceCadetPinball.desktop  SpaceCadetPinball.metainfo.xml
Platform/MacOS/: Info.plist  icon.icns
Platform/macOS/: Info.plist  SpaceCadetPinball.icns
SpaceCadetPinball/: DatParser.cpp  DatParser.h  DebugOverlay.cpp  DebugOverlay.h  EmbeddedData.cpp  EmbeddedData.h  GroupData.cpp  GroupData.h  NatvisFile.natvis  Sound.cpp  Sound.h  SpaceCadetPinball.cpp  SpaceCadetPinball.rc  SpaceCadetPinball.vcxproj  SpaceCadetPinball.vcxproj.filters  TBall.cpp  TBall.h  TBlocker.cpp  TBlocker.h  TBumper.cpp  TBumper.h  TCircle.cpp  TCircle.h  TCollisionComponent.cpp  TCollisionComponent.h  TComponentGroup.cpp  TComponentGroup.h  TDemo.cpp  TDemo.h  TDrain.cpp  TDrain.h  TEdgeBox.cpp  TEdgeBox.h  TEdgeManager.cpp  TEdgeManager.h  TEdgeSegment.cpp  TEdgeSegment.h  TFlagSpinner.cpp  TFlagSpinner.h  TFlipper.cpp  (+116 more)
game_resources/: README.txt
packaging/: Info.plist
